# repo_benchmark

./: .env.example  .gitattributes  .gitignore  README.md  datasette.yaml  github.db  pyproject.toml  rb.py  test_rb.py
static/: repo-plot.js
templates/: index.html  query-github-stars.html  table-github-repos.html
templates/pages/custom/: {slug}.html
