[project]
dependencies = [
  "datasette>=1.0a17",
  "datasette-cors>=1.0.1",
  "github-to-sqlite>=2.9",
  "llm>=0.21",
  "ruff>=0.5.5",
  "requests>=2.32.3",
]
description = "Add your description here"
name = "repo-benchmanrk"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
rb = "rb:cli"

[tool.setuptools]
py-modules = ["rb"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "F", # Pyflakes
  "W", # pycodestyle warnings
  "I", # isort
]

[tool.ruff.lint.isort]
known-first-party = ["rb"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "datasette-auth-tokens",
]
